fix add container singularity

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,7 +17,7 @@ profiles {
   singularity { 
     singularity.enabled = true 
     singularity.autoMounts = true
-    process.container = 'shub://lipinskiboris/DE-nf:latest'
+    process.container = 'shub://Lipinski-B/DE-nf:latest'
   }
 }
 
