--- a/environnement.yml
+++ b/environnement.yml
@@ -12,4 +12,14 @@ dependencies:
   - fastqc=0.11  
   - multiqc=1.8
   - bioconductor-deseq2=1.30.0-0
+  - bioconductor-edgeR=2.22.0
+  - bioconductor-genefilter=1.72.1
+  - bioconductor-biomaRt=2.46.3
+  - r-pheatmap=1.0.12
+  - r-RColorBrewer=1.1-2
+  - r-ggbeeswarm=0.6.1
+  - r-stringr=1.4.0
+  - r-ggplot2=3.3.3
+  - r-NMF=0.23.0
+  - r-tidyverse=1.3.0
 
