--- a/environnement.yml
+++ b/environnement.yml
@@ -12,13 +12,13 @@ dependencies:
   - fastqc=0.11  
   - multiqc=1.8
   - bioconductor-deseq2=1.30.0-0
-  - bioconductor-biomaRt=2.46.3
   - r-pheatmap=1.0.12
   - r-RColorBrewer=1.1-2
   - r-stringr=1.4.0
   - r-ggplot2=3.3.3
   - r-tidyverse=1.3.0
-  - r-ggbeeswarm=0.5.3
-  - bioconductor-edgeR=3.32.1
+  - bioconductor-edgeR
+  - bioconductor-biomaRt
   - bioconductor-genefilter
+  - r-ggbeeswarm
   - r-NMF
