--- a/environnement.yml
+++ b/environnement.yml
@@ -9,7 +9,7 @@ dependencies:
   - star=2.7.7a
   - htseq=0.13.5
   - samtools=1.9
-  - fastqc=0.11  
+  - fastqc=0.11.9
   - multiqc=1.8
   - bioconductor-deseq2=1.30.0-0
   - r-pheatmap=1.0.12
@@ -17,8 +17,8 @@ dependencies:
   - r-stringr=1.4.0
   - r-ggplot2=3.3.3
   - r-tidyverse=1.3.0
-  - bioconductor-edgeR
-  - bioconductor-biomaRt
+  - bioconductor-edger
+  - bioconductor-biomart
   - bioconductor-genefilter
   - r-ggbeeswarm
-  - r-NMF
+  - r-nmf
